Remove Property for checking if WSL is supported
This must run during activation and before a certain point of VS Code Startup, however,  you can't make this async. This will make startup slower and the point was to hide unsupported commands on WSL so users didn't have the struggle of seeing it was unsupported.

However, it's not worth slowing everyone down for this so now it just happens when you try the command.

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -49,8 +49,7 @@
             {
                 "command": "dotnet.acquireGlobalSDKPublic",
                 "title": "Install the .NET SDK System-Wide.",
-                "category": ".NET Install Tool",
-                "enablement": "!dotnetAcquisitionExtension.isGlobalSDKUnsupported"
+                "category": ".NET Install Tool"
             },
             {
                 "command": "dotnet.uninstallPublic",
