separate log into public since the template context for 1es prevents it from running

--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -46,3 +46,10 @@ jobs:
     - script: ./test.sh
       displayName: 🔎 Test Mac and Linux
       env: {DISPLAY: ':99.0'}
+  - ${{ if ne(parameters.useOneEngineeringPool, 'true') }}:
+    - task: PublishBuildArtifacts@1
+      displayName: ♻️ Publish Public PR Logs
+      inputs:
+        pathtoPublish: '$(Build.SourcesDirectory)/vscode-dotnet-runtime-extension/dist/test/functional/logs'
+        artifactName: 'logs'
+      condition: always()
