Don't package SDK Anymore since its deprecated (#2200)
* Don't package SDK Anymore since its deprecated

The Education Bundle was deprecated, now the pipeline does not need to produce a build of it.

* Add a timestamp to generated logs so that theyre unique

Without this, publishing logs if you rerun the pipeline will fail because its not a unique output and was already outputted to as artifacts before.

* fix indentation

* separate log into public since the template context for 1es prevents it from running

--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -16,14 +16,18 @@ jobs:
       displayName: '🌐 Publish Install Tool Logs'
       condition: always()
       targetPath: '$(Build.SourcesDirectory)/vscode-dotnet-runtime-extension/dist/test/functional/logs'
-      artifactName: '${{ parameters.pool.os }} Install Tool logs'
+      artifactName: '${{ parameters.pool.os }} Install Tool logs-$(currentTimeStamp)'
     - output: pipelineArtifact
       displayName: '👜 Publish SDK Logs'
       condition: always()
       targetPath: '$(Build.SourcesDirectory)/vscode-dotnet-sdk-extension/dist/test/functional/logs'
-      artifactName: '${{ parameters.pool.os }} SDK logs'
+      artifactName: '${{ parameters.pool.os }} SDK logs-$(currentTimeStamp)'
   steps:
   - template: install-node.yaml
+  - pwsh: |
+      $date=$(Get-Date -format yyyyMMdd-Hmmss)
+      Write-Host "##vso[task.setvariable variable=currentTimeStamp]$date"
+    displayName: '🕦 Getting timestamp for unique artifact names'
   - ${{ if eq(parameters.pool.os, 'windows') }}:
     - script: build.cmd
       displayName: 💻 Build Windows
@@ -42,3 +46,10 @@ jobs:
     - script: ./test.sh
       displayName: 🔎 Test Mac and Linux
       env: {DISPLAY: ':99.0'}
+  - ${{ if ne(parameters.useOneEngineeringPool, 'true') }}:
+    - task: PublishBuildArtifacts@1
+      displayName: ♻️ Publish Public PR Logs
+      inputs:
+        pathtoPublish: '$(Build.SourcesDirectory)/vscode-dotnet-runtime-extension/dist/test/functional/logs'
+        artifactName: 'logs'
+      condition: always()
