Consider that tests may retry and then cause the lock to timeout on other tests
Also, the file path of locks was too long for mac which caused issues.

--- a/vscode-dotnet-runtime-library/.vscode/settings.json
+++ b/vscode-dotnet-runtime-library/.vscode/settings.json
@@ -19,7 +19,8 @@
         "pkexec",
         "REGHEXVALUE",
         "REGTYPE",
-        "setx"
+        "setx",
+        "vscd"
     ],
     // Formatting on save
     "editor.formatOnSave": true,
