Add public command to reset data and uninstall all
Also makes uninstall all hold the lock for 'installed' so it cannot cause a weird partial install state

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -55,6 +55,11 @@
                 "command": "dotnet.uninstallPublic",
                 "title": "Uninstall .NET.",
                 "category": ".NET Install Tool"
+            },
+            {
+                "command": "dotnet.resetData",
+                "title": "Reset Extension Data (Uninstalls All Installations, Which May Cause Other Extensions To Fail. Uninstall Dependent Extensions First)",
+                "category": ".NET Install Tool"
             }
         ],
         "configuration": {
