Uninstall Logic Handles Corrupt Save Data (#2166)
* fix typo and collect whether deletion worked

* Fix some of the deletion code

* Add event for when uninstall is external

* Handle Existing Installs with Other Request Orderings Correctly

A problem C# has noticed is that there is a small chance for the install script to think it is done installing, and for our extension to think we have installed, even though not all files are there.

Upon closer inspection, I realized some issues and resolved them:

# There is a race condition

We have a check to see if there is an existing 'promise' that is working on doing the same install as another request. However, sometimes that check will run simultaneously. What we did before was only lock during the process of running the install script, locking on the installation id (version+arch+install type+mode). Now we lock during the process of looking for existing installs, doing the install, and recording the install.

2. The install script handler used the wrong type (InstallationContext) instead of a AcquisitionContext to validate it, so the mode it was validating was undefined. This means it would consider a valid install to be invalid.

* Fix test logic

removes tests for deprecated education bundle extension

* Fix multiple versions  test

* Fix null arch

* Code cleanup

- Movev the lock for partial into the local since it already needed to do so, and this would be a perf hit to acquire it twice

* Remove promise and 'installing' tracking mechanism, prefer mutex

- Remove 'installing' state.

- Remove promises store.

The promises was a way to check if an existing function was running and executing the same install. This was added at the very beginning. However, it was stored in local memory. This is not good as it is not persistent across multiple instances of vscode running at the same time. Now we have a mutex over the local storage folder that works cross-process and intra-process. The mutex should protect the entire 

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -55,6 +55,12 @@
                 "command": "dotnet.uninstallPublic",
                 "title": "Uninstall .NET.",
                 "category": ".NET Install Tool"
+            },
+            {
+                "command": "dotnet.resetData",
+                "title": "Reset Extension Data (Uninstalls All Installations, Which May Cause Other Extensions To Fail. Uninstall Dependent Extensions First)",
+                "category": ".NET Install Tool",
+                "enablement": "config.dotnetAcquisitionExtension.showResetDataCommand"
             }
         ],
         "configuration": {
@@ -106,6 +112,11 @@
                     "type": "number",
                     "default": 1,
                     "description": "To improve performance, the results of checking .NET Installations may be cached. If you're facing issues with an install not being detected, try setting this to 0.5, or 0; or increasing the number to improve performance. Restart to change."
+                },
+                "dotnetAcquisitionExtension.showResetDataCommand": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Show the command to reset extension data in the command palette. Restart VS Code and remove dependent extensions first."
                 }
             }
         }
