Use ELF/COFF/PE/MACHO Header to get Executable Architecture
We need to verify a user's install matches the architecture that the code application / extension wants to run under.

We used to do this with dotnet --info which is a fallback.
Now, we can also do this with dotnet --list-runtimes --arch when supported. However, checking if it is supported requires an extra process call which is slower than reading the file header.

Once we hit dotnet 11, we will know that --arch is supported so we can skip this work of reading the file header. For now, this will allow us to gain a perf boost in the cases where this works.

Documented in the code is how this logic works. Additionally, I've added test executables (real .net 9 ones) to show it works. Finally, I added the copyfiles module to copy the test assets into the dist folder, as otherwise they dont get copied.

--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -16,10 +16,11 @@
 		"vscode:prepublish": "npm run compile && dotnet build ../msbuild/signJs --property jsOutputPath=..\\..\\vscode-dotnet-runtime-library\\dist -bl -v:normal",
 		"compile": "npm run clean && tsc -p ./ && npm run mockPack",
 		"mockPack": "run-script-os",
+		"copyTestAssets": "copyfiles -u 4 \"src/test/mocks/Executables/**/*\" dist/test/mocks/Executables/",
 		"mockPack:darwin:linux": "cd .. && sh ./mock-webpack.sh && cd vscode-dotnet-runtime-library",
 		"mockPack:win32": "pushd .. && @powershell -NoProfile -ExecutionPolicy Unrestricted -Command ./mock-webpack.ps1 && popd",
 		"watch": "npm run clean && tsc -watch -p ./",
-		"test": "npm run compile --silent && npm run unit-test",
+		"test": "npm run compile --silent && npm run copyTestAssets && npm run unit-test",
 		"unit-test": "mocha -u tdd -- dist/test/unit/**.test.js",
 		"clean": "rimraf dist"
 	},
@@ -27,6 +28,7 @@
 		"@types/chai": "4.2.22",
 		"@types/lodash": "^4.17.13",
 		"@types/proper-lockfile": "^4.1.2",
+		"copyfiles": "^2.4.1",
 		"glob": "^7.2.0"
 	},
 	"dependencies": {
