--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-jsdoc": "^50.2.2",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
+		"node": "^22.15.1",
 		"tslint": "^6.1.3",
 		"typescript": "^5.5.4"
 	},
