--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -31,7 +31,7 @@ parameters:
     os: windows
     emoji: 🪟
   - name: NetCore-Public
-    demands: ImageOverride -equals build.ubuntu.2204.amd64.open
+    demands: ImageOverride -equals 1es-ubuntu-2004-open
     os: linux
     emoji: 🐧
   - name: Azure Pipelines
