--- a/1pr-azure-pipeline.yml
+++ b/1pr-azure-pipeline.yml
@@ -20,21 +20,21 @@ variables:
   value: true
 
 # The public PR pool schema is different from the 1ES one. We use 'vmImage' which is a default azure pipeline schema. 'os' and 'name' have nothing to do with image selection here.
-# 1ES uses 'image' but defining an image this way using our public pools duseOneEngineeringPool not work as they aren't configured this way.
+# 1ES uses 'image' but defining an image this way using our public pools useOneEngineeringPool not work as they aren't configured this way.
 # We can later add the flag 'useOneEngineeringPool' or one engineering system: false or true in all tasks to determine if we use vmImage or a 1es pool object.
 parameters:
 - name: pools
   type: object
   default:
   - name: NetCore-Public
-    vmImage: windows-latest
+    demands: ImageOverride -equals 1es-windows-2022-open
     os: windows
     emoji: 🪟
   - name: NetCore-Public
-    vmImage: ubuntu-latest
+    demands: ImageOverride -equals 1es-ubuntu-2004-open
     os: linux
     emoji: 🐧
-  - name: NetCore-Public
+  - name: Azure Pipelines
     vmImage: macOS-latest
     os: macOS
     emoji: 🍎
@@ -46,7 +46,11 @@ stages:
     - template: pipeline-templates/build-test.yaml
       parameters:
         pool:
-          vmImage: ${{ image.vmImage }}
+          name: ${{ image.name }}
+          ${{ if image.demands }}:
+            demands: ${{ image.demands }}
+          ${{ if image.vmImage }}:
+            vmImage: ${{ image.vmImage }}
           os: ${{ image.os }}
           emoji: ${{ image.emoji }}
         useOneEngineeringPool: false
@@ -59,13 +63,15 @@ stages:
   - template: pipeline-templates/lint.yaml
     parameters:
       pool:
-        vmImage: macOS-latest
-        os: macOS
+        name: NetCore-Public
+        demands: ImageOverride -equals 1es-windows-2022-open
+        os: windows
       useOneEngineeringPool: false
   - template: pipeline-templates/package-vsix.yaml
     parameters:
       pool:
-        vmImage: windows-latest
+        name: NetCore-Public
+        demands: ImageOverride -equals 1es-windows-2022-open
         os: windows
       useOneEngineeringPool: false
       SignType: Test
