Add the setting

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -108,6 +108,11 @@
                     "type": "boolean",
                     "description": "If you'd like to continue using a .NET path that is not meant to be used for an extension and may cause instability (please read above about the existingDotnetPath setting) then set this to true and restart."
                 },
+                "dotnetAcquisitionExtension.highVerbosity": {
+                    "type": "boolean",
+                    "description": "Enable this to show more detailed output from our extension.",
+                    "default": "false"
+                },
                 "dotnetAcquisitionExtension.cacheTimeToLiveMultiplier": {
                     "type": "number",
                     "default": 1,
