--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -117,6 +117,11 @@
                     "type": "boolean",
                     "default": false,
                     "description": "Show the command to reset extension data in the command palette. Restart VS Code and remove dependent extensions first."
+                },
+                "dotnetAcquisitionExtension.suppressOutput": {
+                    "type": "boolean",
+                    "description": "Enable this to show more detailed output from our extension.",
+                    "default": "false"
                 }
             }
         }
