--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -121,7 +121,7 @@
                 "dotnetAcquisitionExtension.suppressOutput": {
                     "type": "boolean",
                     "default": false,
-                    "description": "Hide all messages in the output window from our extension. Error pop-ups from APIs that other extensions request we display will still appear.",
+                    "description": "Hide all messages in the output window from our extension. Error pop-ups from APIs that other extensions request we display will still appear."
                 }
             }
         }
