Add setting to disable messages in the output window (#2332)
* Add setting to disable messages in the output window

Resolves https://github.com/dotnet/vscode-dotnet-runtime/issues/2027

The output window in vscode, under the '.NET Install Tool' tab may be annoying/unnecessary to the user. This adds a setting to disable that output.

* Interface as OutputChannel

VS Codes impl may not return the thread which would make the inner test loop of mocha never complete so the test hangs indefinitely

* Dont use acquisition started

We can check started and completed once, no need to do this, its stopping the event loop from finishing

* Reduce setInterval Speed

We dont need to print out that often and take thread resources like that.

* Add the setting

* Fix the setting

* fix ,

...

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -117,6 +117,11 @@
                     "type": "boolean",
                     "default": false,
                     "description": "Show the command to reset extension data in the command palette. Restart VS Code and remove dependent extensions first."
+                },
+                "dotnetAcquisitionExtension.suppressOutput": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Hide all messages in the output window from our extension. Error pop-ups from APIs that other extensions request we display will still appear."
                 }
             }
         }
