Prep 2.3.7 Pre-Release, Try to make prerelease depending on condition
This version should be a pre-release, and we want to add logic to automate that and do it more often. Code insiders uses pre-release builds by default and we want to use that to ensure safety with updates before a broader audience.

--- a/1es-azure-pipeline.yml
+++ b/1es-azure-pipeline.yml
@@ -54,6 +54,13 @@ parameters:
   type: string
   default: Test
   values: [ 'Test', 'Real' ]
+- name: PRERELEASE
+  displayName: Prerelease
+  type: boolean
+  default: false
+  values:
+  - true
+  - false
 
 extends:
   template: v1/1ES.Official.PipelineTemplate.yml@1esPipelines
@@ -106,6 +113,7 @@ extends:
             os: windows
           useOneEngineeringPool: true
           SignType: ${{ parameters.SignType }}
+          PREELEASE: ${{ parameters.PRERELEASE }}
       - template: pipeline-templates/sbom.yaml@self
         parameters:
           pool:
