Fix test and enable feature

--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -122,6 +122,11 @@
                     "type": "boolean",
                     "default": false,
                     "description": "Hide all messages in the output window from our extension. Error pop-ups from APIs that other extensions request we display will still appear."
+                },
+                "dotnetAcquisitionExtension.highVerbosity": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Enable this to show more detailed output from our extension."
                 }
             }
         }
