--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -48,9 +48,9 @@ jobs:
           $basePublishArgs += '--packagePath'
           $publishArgs = $basePublishArgs + 'vscode-dotnet-runtime-$(GetVersion.version)-signed.vsix'
           $publishArgs += '--manifestPath'
-          $publishArgs = $basePublishArgs + 'vscode-dotnet-runtime-$(GetVersion.version).manifest'
+          $publishArgs += 'vscode-dotnet-runtime-$(GetVersion.version).manifest'
           $publishArgs += '--signaturePath'
-          $publishArgs = $basePublishArgs + 'vscode-dotnet-runtime-$(GetVersion.version).signature.p7s'
+          $publishArgs += 'vscode-dotnet-runtime-$(GetVersion.version).signature.p7s'
           If ("${{ parameters.SignType }}" -ne "Real") {
             Write-Host "With a test-signed build, the command to publish is printed instead of run."
             Write-Host "##[command]vsce $publishArgs"
