Copy manifest and signature file to artifacts folder

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -65,7 +65,7 @@ jobs:
     displayName: '📩 Copy Artifact'
     inputs:
       SourceFolder: '$(Build.SourcesDirectory)'
-      Contents: '**\*.vsix'
+      Contents: '**\$(package-name)-$(GetVersion.version)*.*'
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
       flattenFolders: true
   - task: CopyFiles@2
