--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -78,8 +78,8 @@ jobs:
         $manifestFile = $baseName + ".manifest"
         $signatureFile = $baseName + ".signature.p7s"
 
-        $vsceVerifyArgs = 'vsce','verify-signature','--packagePath',$vsix,'--manifestPath',$manifestFile,'--signaturePath',$signatureFile
-        $output = Spawn-Tool 'yarn' $vsceVerifyArgs
+        $vsceVerifyArgs = '@vscode/vsce','verify-signature','--packagePath',$vsix,'--manifestPath',$manifestFile,'--signaturePath',$signatureFile
+        $output = Spawn-Tool 'npx' $vsceVerifyArgs
 
         # This is a brittle check but the command does not return a non-zero exit code for failed validation.
         # Opened https://github.com/microsoft/vscode-vsce/issues/1192 to track this.
