--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -15,6 +15,9 @@ jobs:
       inputs:
         instructions: 'Please validate that the release build has been tested, and resume to publish a new version'
         onTimeout: 'resume'
+        notifyUsers: |
+          [project]\Project Administrators
+          [project]\Contributors
     - bash: |
         # Check if validation was explicitly approved (not timed out)
         if [ "$(validation.ManualValidationResult)" = "succeeded" ]; then
@@ -58,14 +61,43 @@ jobs:
         workingDirectory: '$(System.ArtifactsDirectory)'
         inlineScript: |
           npm i -g --verbose @vscode/vsce
-          $basePublishArgs = , "publish"
-          $basePublishArgs += '--azure-credential'
-          $basePublishArgs += '--packagePath'
-          $publishArgs = $basePublishArgs + 'vscode-dotnet-runtime-$(GetVersion.version)-signed.vsix'
-          $publishArgs += '--manifestPath'
-          $publishArgs += 'vscode-dotnet-runtime-$(GetVersion.version).manifest'
-          $publishArgs += '--signaturePath'
-          $publishArgs += 'vscode-dotnet-runtime-$(GetVersion.version).signature.p7s'
+
+          # Debug: List the artifacts directory structure
+          Write-Host "Artifacts directory contents:"
+          Get-ChildItem -Recurse | Format-Table Name, FullName
+
+          # Find the required files
+          $vsixFile = Get-ChildItem -Recurse -Filter "vscode-dotnet-runtime-$(GetVersion.version).vsix" | Select-Object -First 1
+          if (-not $vsixFile) {
+            $vsixFile = Get-ChildItem -Recurse -Filter "vscode-dotnet-runtime-$(GetVersion.version)-signed.vsix" | Select-Object -First 1
+          }
+
+          $manifestFile = Get-ChildItem -Recurse -Filter "vscode-dotnet-runtime-$(GetVersion.version).manifest" | Select-Object -First 1
+          $signatureFile = Get-ChildItem -Recurse -Filter "vscode-dotnet-runtime-$(GetVersion.version).signature.p7s" | Select-Object -First 1
+
+          if (-not $vsixFile -or -not $manifestFile -or -not $signatureFile) {
+            Write-Error "Could not find required files for version $(GetVersion.version)"
+            Write-Error "VSIX: $($vsixFile -ne $null)"
+            Write-Error "Manifest: $($manifestFile -ne $null)"
+            Write-Error "Signature: $($signatureFile -ne $null)"
+            exit 1
+          }
+
+          Write-Host "Using VSIX file: $($vsixFile.FullName)"
+          Write-Host "Using manifest: $($manifestFile.FullName)"
+          Write-Host "Using signature: $($signatureFile.FullName)"
+
+          $publishArgs = @(
+            'publish'
+            '--azure-credential'
+            '--packagePath'
+            $vsixFile.FullName
+            '--manifestPath'
+            $manifestFile.FullName
+            '--signaturePath'
+            $signatureFile.FullName
+          )
+
           If ("${{ parameters.SignType }}" -ne "Real") {
             Write-Host "With a test-signed build, the command to publish is printed instead of run."
             Write-Host "##[command]vsce $publishArgs"
