Remove manual configuration from pipeline
Manual pre-release and manual sign check flags are no longer allowed

--- a/pipeline-templates/package-vsix.yaml
+++ b/pipeline-templates/package-vsix.yaml
@@ -1,7 +1,6 @@
 parameters:
   pool: ''
   SignType: ''
-  PRERELEASE: false
 
 jobs:
 - job: ${{ parameters.pool.os }}_Package
@@ -30,8 +29,19 @@ jobs:
       fi
       npm version $VERSION --allow-same-version
       echo "##vso[task.setvariable variable=version;isOutput=true]$VERSION"
+
+      # Calculate if this should be prerelease based on patch version (odd = prerelease)
+      PATCH_VERSION="${VERSION##*.}"  # Gets everything after the last dot
+      IS_ODD=$((PATCH_VERSION % 2))
+      if [ $IS_ODD -eq 1 ]; then
+        echo "##vso[task.setvariable variable=isPrerelease;isOutput=true]true"
+        echo "Version $VERSION has odd patch number ($PATCH_VERSION) - will be marked as prerelease"
+      else
+        echo "##vso[task.setvariable variable=isPrerelease;isOutput=true]false"
+        echo "Version $VERSION has even patch number ($PATCH_VERSION) - will be marked as stable release"
+      fi
     name: GetVersion
-    displayName: '❓ Get Version'
+    displayName: '❓ Get Version and Determine Prerelease Status'
     workingDirectory: $(dir-name)
   - ${{ if eq(parameters.useOneEngineeringPool, 'true') }}:
     - template: prepare-signing.yaml
@@ -40,9 +50,11 @@ jobs:
   - bash: |
       npm i -g rimraf
       npm i -g @vscode/vsce
-      if [ "${{ parameters.PRERELEASE }}" = "true" ]; then
+      if [ "$(GetVersion.isPrerelease)" = "true" ]; then
+        echo "Packaging as prerelease..."
         vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn --pre-release
       else
+        echo "Packaging as stable release..."
         vsce package -o $(package-name)-$(GetVersion.version).vsix --ignoreFile ../.vscodeignore --yarn
       fi
       vsce generate-manifest -i $(package-name)-$(GetVersion.version).vsix -o $(package-name)-$(GetVersion.version).manifest
