add template context prod

--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -5,6 +5,9 @@ parameters:
 
 jobs:
   - deployment: PublishToMarketplace
+    templateContext:
+      type: releaseJob
+      isProduction: true
     pool:
       ${{ parameters.pool }}
     displayName: '🌐 Publish to Marketplace'
