checkout to get version details

--- a/pipeline-templates/publish.yaml
+++ b/pipeline-templates/publish.yaml
@@ -18,6 +18,8 @@ jobs:
       runOnce:
         deploy:
           steps:
+          - checkout: self
+            displayName: '📥 Checkout source code'
           - task: DownloadPipelineArtifact@2
             displayName: '⬇️ Download Packaged Extension'
             inputs:
